Resolve "Defender evades goal shot"
Closes #2176

See merge request main/Sumatra!2202

sumatra-commit: 78a253805aa4ebd7e2deeb37076d5a615c306195